# ProjectV2

./: .replit  database.py  fix_enum_final.py  fix_enum_values.py  init_db.py  main.py  migrate_interviews.py  migrate_offers.py  pyproject.toml  recruitment_tracker.db  requirements.txt  seed_data.py
applicants/: crud.py  models.py  parser.py  router.py  schemas.py
applications/: crud.py  models.py  router.py  schemas.py
attached_assets/: Pasted--Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-workspace--1752226079548_1752226079549.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-wo-1752227666625_1752227666629.txt  Pasted-INFO-172-31-128-55-54636-POST-auth-token-HTTP-1-1-500-Internal-Server-Error-ERROR-Exc-1752226136819_1752226136820.txt  Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn-1752235063824_1752235063825.txt  Pasted-List-offers-companies-see-all-applicants-see-their-own-Parameters-Cancel-No-parameters-Ex-1752151266610_1752151266612.txt  Pasted-NFO-172-31-128-55-59378-POST-auth-token-HTTP-1-1-500-Internal-Server-Error-ERROR-Exce-1752226023395_1752226023396.txt  Pasted-Recruitment-Tracker-System-Complete-FastAPI-Application-Project-Overview-Build-a-complete-hiring-1752139231427_1752139231428.txt  Pasted-Register-applicant-and-upload-resume-PDF-Parameters-Cancel-Reset-No-parameters-Request-body-1752149507374_1752149507376.txt
auth/: crud.py  models.py  router.py  schemas.py
core/: config.py  models.py
interviews/: crud.py  models.py  (+2 more)
(+14 files in other folders)
